--- a/challenges/static/challenges/challenge.css
+++ b/challenges/static/challenges/challenge.css
@@ -3,19 +3,11 @@ p {
     color: #4b4b4b;
 }
 
-/* a {
-    color: green;
-    text-decoration: none;
-} */
-
-/* a:hover {
-    text-decoration: underline;
-} */
-
 #today-challenge {
     font-weight: bold;
     font-size: 60px;
     color: rgb(230, 230, 230);
+    padding: 12px 48px;
     /* margin: 1rem 0 0 0; */
 }
 
